Agregado un metodo para hacer selects a los ID de alguna clase en la clase coneccion y tambien agregado el registro de usuario en la clase de new user, tambien cambios en la base de datos, se elimino la entidad teleono para unirla a persona

--- a/INVENTIO/Proyecto.csproj
+++ b/INVENTIO/Proyecto.csproj
@@ -226,8 +226,8 @@
     <Compile Include="Proyecto\inventary-win\Productos\OperationWindow.Designer.cs">
       <DependentUpon>OperationWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="Proyecto\inventary-win\PersonObj.cs" />
-    <Compile Include="Proyecto\inventary-win\ProductObj.cs" />
+    <Compile Include="Proyecto\inventary-win\LogIn and Register\PersonObj.cs" />
+    <Compile Include="Proyecto\inventary-win\Productos\ProductObj.cs" />
     <Compile Include="Proyecto\inventary-win\Productos\ProductsWindow.cs">
       <SubType>Form</SubType>
     </Compile>
